--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,14 @@ restaurant.jwt.refresh-token-validity-in-seconds=8640000
 
 #  config pagination start = 1
 spring.data.web.pageable.one-indexed-parameters = true
+
+
+#config upload file
+###
+#default = 1MB
+spring.servlet.multipart.max-file-size=50MB
+#default = 10 MB (form data)
+spring.servlet.multipart.max-request-size=50MB
+###
+# Base path
+hoidanit.upload-file.base-uri=file:///E:/fullStack/project/01_restaurant/restaurant_BE/upload/
