confi minio to save images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,12 @@ spring.servlet.multipart.max-request-size=50MB
 ###
 # Base path
 hoidanit.upload-file.base-uri=file:///E:/fullStack/project/01_restaurant/restaurant_BE/upload/
+
+# Kết nối MinIO
+minio.url=http://localhost:9000
+minio.access-key=admin
+minio.secret-key=password
+minio.bucket.default=restaurant
+
+# Nếu có dùng profile
+spring.profiles.active=minio
